feat: change button style

--- a/src/app/pages/application/links/links.component.html
+++ b/src/app/pages/application/links/links.component.html
@@ -160,7 +160,7 @@
           [style.color]="selectedLinkTree.buttonTextColor">
           {{ link.label }}
         </a>
-        <button (click)="deleteLink(i)" class="button is-light delete-link-button">
+        <button (click)="deleteLink(i)" class="button is-danger is-outlined delete-link-button">
           <i class="fas fa-trash"></i>
         </button>
       </div>
