--- a/src/app/pages/application/links/links.component.html
+++ b/src/app/pages/application/links/links.component.html
@@ -25,8 +25,7 @@
       </div>
     </div>
     <div class="media-right">
-      <a class="has-text-dark"
-        (click)="logout()">
+      <a class="has-text-dark" (click)="logout()">
         <i class="fas fa-sign-out-alt"></i>
       </a>
     </div>
@@ -44,23 +43,21 @@
       </p>
       <ul class="menu-list">
         <li *ngFor="let link of links">
-          <a (click)="selectLink(link)"
-            [class]="{ 'is-active': selectedLinkTree.id === link.id }">
+          <a (click)="selectLink(link)" [class]="{ 'is-active': selectedLinkTree.id === link.id }">
             {{ link.title }}
-            <i (click)="deleteLinkTree(link)"
-              *ngIf="selectedLinkTree.id === link.id"
+            <i (click)="deleteLinkTree(link)" *ngIf="selectedLinkTree.id === link.id"
               class="fas fa-trash is-pulled-right"></i>
           </a>
         </li>
       </ul>
-      <div class="menu-bottom-section mb-6 mt-6">
-        <app-language-switch></app-language-switch>
-        <p class="mt-5 has-text-centered">
-          {{ 'madeWith' | translate }} <i class="fas fa-heart has-text-danger"></i> {{ 'by' | translate }} 
-          <a target="_blank" href="https://unze.com.br">Unze</a>
-        </p>
-      </div>
     </aside>
+    <div class="mb-6 mt-6">
+      <app-language-switch></app-language-switch>
+      <p class="mt-5 has-text-centered">
+        {{ 'madeWith' | translate }} <i class="fas fa-heart has-text-danger"></i> {{ 'by' | translate }}
+        <a target="_blank" href="https://unze.com.br">Unze</a>
+      </p>
+    </div>
   </div>
 </div>
 <div class="current-link has-background-white">
@@ -74,7 +71,8 @@
       <div class="field">
         <label class="label" for="linkTreeUrl">{{ 'URLToShare' | translate }}</label>
         <div class="control">
-          <input id="linkTreeUrl" readonly class="input" [value]="publicLink" #userinput (click)="copyPublicLink(userinput)">
+          <input id="linkTreeUrl" readonly class="input" [value]="publicLink" #userinput
+            (click)="copyPublicLink(userinput)">
         </div>
       </div>
       <h4 class="title is-4 mt-6">{{ 'Configuration' | translate }}</h4>
@@ -93,25 +91,17 @@
       <div class="field">
         <label class="label" for="color">{{ 'ButtonColor' | translate }}</label>
         <div class="control">
-          <input id="color" class="input"
-            [style]="{ backgroundColor: selectedLinkTree.buttonColor }"
-            [(colorPicker)]="selectedLinkTree.buttonColor"
-            [cpOKButton]="true"
-            [cpSaveClickOutside]="false"
-            cpOKButtonClass= "button is-link"
-            (colorPickerSelect)="saveButtonColor()">
+          <input id="color" class="input" [style]="{ backgroundColor: selectedLinkTree.buttonColor }"
+            [(colorPicker)]="selectedLinkTree.buttonColor" [cpOKButton]="true" [cpSaveClickOutside]="false"
+            cpOKButtonClass="button is-link" (colorPickerSelect)="saveButtonColor()">
         </div>
       </div>
       <div class="field">
         <label class="label" for="color">{{ 'ButtonTextColor' | translate }}</label>
         <div class="control">
-          <input id="color" class="input"
-            [style]="{ backgroundColor: selectedLinkTree.buttonTextColor }"
-            [(colorPicker)]="selectedLinkTree.buttonTextColor"
-            [cpOKButton]="true"
-            [cpSaveClickOutside]="false"
-            cpOKButtonClass= "button is-link"
-            (colorPickerSelect)="saveButtonColor()">
+          <input id="color" class="input" [style]="{ backgroundColor: selectedLinkTree.buttonTextColor }"
+            [(colorPicker)]="selectedLinkTree.buttonTextColor" [cpOKButton]="true" [cpSaveClickOutside]="false"
+            cpOKButtonClass="button is-link" (colorPickerSelect)="saveButtonColor()">
         </div>
       </div>
       <div class="mt-6">
@@ -120,24 +110,27 @@
           <div class="field">
             <label class="label" for="newLinkLabel">{{ 'TextOfTheNewLink' | translate }}</label>
             <div class="control">
-              <input id="newLinkLabel" class="input" type="text" maxlength="50" formControlName="label" [class]="{ 'is-danger': newLinkForm.get('label').invalid && (newLinkForm.get('label').dirty || newLinkForm.get('label').touched) }">
+              <input id="newLinkLabel" class="input" type="text" maxlength="50" formControlName="label"
+                [class]="{ 'is-danger': newLinkForm.get('label').invalid && (newLinkForm.get('label').dirty || newLinkForm.get('label').touched) }">
             </div>
-            <div class="help is-danger" *ngIf="newLinkForm.get('label').invalid && (newLinkForm.get('label').dirty || newLinkForm.get('label').touched)">
+            <div class="help is-danger"
+              *ngIf="newLinkForm.get('label').invalid && (newLinkForm.get('label').dirty || newLinkForm.get('label').touched)">
               <p *ngIf="newLinkForm.get('label').errors?.required">{{ 'ProvideALabel' | translate }}</p>
             </div>
           </div>
           <div class="field">
             <label class="label" for="newLinkUrl">{{ 'URLOfTheNewLink' | translate }}</label>
             <div class="control">
-              <input id="newLinkUrl" class="input" type="url" formControlName="url" [class]="{ 'is-danger': newLinkForm.get('url').invalid && (newLinkForm.get('url').dirty || newLinkForm.get('url').touched) }">
+              <input id="newLinkUrl" class="input" type="url" formControlName="url"
+                [class]="{ 'is-danger': newLinkForm.get('url').invalid && (newLinkForm.get('url').dirty || newLinkForm.get('url').touched) }">
             </div>
-            <div class="help is-danger" *ngIf="newLinkForm.get('url').invalid && (newLinkForm.get('url').dirty || newLinkForm.get('url').touched)">
+            <div class="help is-danger"
+              *ngIf="newLinkForm.get('url').invalid && (newLinkForm.get('url').dirty || newLinkForm.get('url').touched)">
               <p *ngIf="newLinkForm.get('url').errors?.required">{{ 'ProvideAURL' | translate }}</p>
               <p *ngIf="newLinkForm.get('url').errors?.pattern">{{ 'ProvideAValidURL' | translate }}</p>
             </div>
           </div>
-          <button type="submit" [disabled]="!newLinkForm.valid"
-            class="button is-link is-fullwidth">
+          <button type="submit" [disabled]="!newLinkForm.valid" class="button is-link is-fullwidth">
             {{ 'AddLink' | translate }}
           </button>
         </form>
@@ -153,11 +146,8 @@
         {{ selectedLinkTree.description }}
       </p>
       <div class="link mb-5" *ngFor="let link of selectedLinkTree.links; let i = index">
-        <a [href]="link.url"
-          target="_blank"
-          class="button is-fullwidth"
-          [style.backgroundColor]="selectedLinkTree.buttonColor"
-          [style.color]="selectedLinkTree.buttonTextColor">
+        <a [href]="link.url" target="_blank" class="button is-fullwidth"
+          [style.backgroundColor]="selectedLinkTree.buttonColor" [style.color]="selectedLinkTree.buttonTextColor">
           {{ link.label }}
         </a>
         <button (click)="deleteLink(i)" class="button is-danger is-outlined delete-link-button">
