--- a/src/app/pages/application/notes/notes.component.html
+++ b/src/app/pages/application/notes/notes.component.html
@@ -25,8 +25,7 @@
       </div>
     </div>
     <div class="media-right">
-      <a class="has-text-dark"
-        (click)="logout()">
+      <a class="has-text-dark" (click)="logout()">
         <i class="fas fa-sign-out-alt"></i>
       </a>
     </div>
@@ -44,23 +43,20 @@
       </p>
       <ul class="menu-list">
         <li *ngFor="let note of notes">
-          <a (click)="selectNote(note)"
-            [class]="{ 'is-active': selectedNote.id === note.id }">
+          <a (click)="selectNote(note)" [class]="{ 'is-active': selectedNote.id === note.id }">
             {{ note.title }}
-            <i (click)="deleteNote(note)"
-              *ngIf="selectedNote.id === note.id"
-              class="fas fa-trash is-pulled-right"></i>
+            <i (click)="deleteNote(note)" *ngIf="selectedNote.id === note.id" class="fas fa-trash is-pulled-right"></i>
           </a>
         </li>
       </ul>
-      <div class="menu-bottom-section mb-6 mt-6">
-        <app-language-switch></app-language-switch>
-        <p class="mt-5 has-text-centered">
-          {{ 'madeWith' | translate }} <i class="fas fa-heart has-text-danger"></i> {{ 'by' | translate }} 
-          <a target="_blank" href="https://unze.com.br">Unze</a>
-        </p>
-      </div>
     </aside>
+    <div class="mb-6 mt-6">
+      <app-language-switch></app-language-switch>
+      <p class="mt-5 has-text-centered">
+        {{ 'madeWith' | translate }} <i class="fas fa-heart has-text-danger"></i> {{ 'by' | translate }}
+        <a target="_blank" href="https://unze.com.br">Unze</a>
+      </p>
+    </div>
   </div>
 </div>
 <div class="current-note has-background-white">
@@ -70,31 +66,17 @@
   </div>
   <div class="container" *ngIf="selectedNote.id">
     <div>
-      <h2 class="title is-3"
-        *ngIf="!edit.title.toggle"
-        (click)="editTitle()">
+      <h2 class="title is-3" *ngIf="!edit.title.toggle" (click)="editTitle()">
         {{ selectedNote.title }}
       </h2>
-      <input #titleInput
-        type="text"
-        class="input input-edit-on-click title is-3"
-        *ngIf="edit.title.toggle"
-        [(ngModel)]="edit.title.newValue"
-        (blur)="saveTitle()"
-        (keyup.enter)="saveTitle()">
+      <input #titleInput type="text" class="input input-edit-on-click title is-3" *ngIf="edit.title.toggle"
+        [(ngModel)]="edit.title.newValue" (blur)="saveTitle()" (keyup.enter)="saveTitle()">
     </div>
     <br>
-    <markdown class="content"
-      *ngIf="!edit.content.toggle"
-      (click)="editContent()"
-      [data]="selectedNote.content">
+    <markdown class="content" *ngIf="!edit.content.toggle" (click)="editContent()" [data]="selectedNote.content">
     </markdown>
-    <textarea #contentInput
-      class="textarea input-edit-on-click content"
-      *ngIf="edit.content.toggle"
-      [(ngModel)]="edit.content.newValue"
-      (blur)="saveContent()"
-      (keydown)="saveContent($event)">
+    <textarea #contentInput class="textarea input-edit-on-click content" *ngIf="edit.content.toggle"
+      [(ngModel)]="edit.content.newValue" (blur)="saveContent()" (keydown)="saveContent($event)">
     </textarea>
   </div>
 </div>
